@@ -29,3 +29,35 @@
 
 # plot(raster(com, 'WD'), main = 'CWMbin(WD)')
 # contour(raster(com, 'topo'), levels = c(0:6), add = T)
+
+# library(vegan)
+# pca <- princomp(~ LA + WD + Thick + LDMC + SLA, data = PFT_ind, cor = T)
+# lambda <- pca$sdev * sqrt(nrow(pca$scores))
+# plot(t(t(pca$scores[,c(2,3)])/lambda),pch=16, col = 'lightgrey',
+#      xlab = paste('Axe 2 -', round(lambda[2]/sum(lambda)*100, 2), '%'),
+#      ylab = paste('Axe 3 -', round(lambda[3]/sum(lambda)*100, 2), '%'))
+# par(new=T)
+# Rot <- t(t(pca$loadings[,c(2,3)])*lambda)
+# XLIM <- c(-max(abs(Rot[,1])),max(abs(Rot[,1])))
+# XLIM <- XLIM+(XLIM*0.2)
+# plot(Rot,col=4,axes=FALSE,xlim=XLIM,ylim=XLIM,pch="",xlab = "", ylab = "")
+# lines(XLIM, c(0,0), lty = 2)
+# lines(c(0,0), XLIM, lty = 2)
+# col <- c('green', "blue", "firebrick")[c(2, 3, 2, 3, 1)]
+# arrows (rep(0,nrow(pca$loadings)),rep(0,nrow(pca$loadings)),Rot[,1],Rot[,2],col=col,lwd=2)
+# text (Rot[,1:2], pos = c(4, 2, 4, 2, 3), rownames(Rot),col=col,cex=1.2)
+# axis (3)
+# axis (4)
+# legend('topright', c('Acquisitive species',
+#                      'Conservative species',
+#                      'Leaf resource capture and defense'),
+#        text.col = c("blue", "firebrick", "green"))
+
+# library(rgl)
+# plot3d(pca$scores[,1:3])
+# text3d(pca$loadings[,1:3], texts=rownames(pca$loadings), col="red")
+# coords <- NULL
+# for (i in 1:nrow(pca$loadings)) {
+#   coords <- rbind(coords, rbind(c(0,0,0),pca$loadings[i,1:3]))
+# }
+# lines3d(coords, col="red", lwd=4)
